<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ad_failed_title">Ad unavailable</string>
    <string name="ad_failed_reason">The ad could not be shown. %1$s</string>
    <string name="ad_not_ready">Sorry Ad isn’t Ready Yet, Please Check your Internet Connection and Try Again. thanks</string>
    <string name="go_back">Go Back</string>
    <string name="try_again">Try Again</string>
    <string name="native_small_text">Native Ad Area..</string>
    <string name="native_large_text">Large Native Ad Area..</string>
    <string name="collapsable_banner_text">Collapsable Banner Ad Area..</string>
    <string name="watch_ad">Watch ad</string>
    <string name="skip">No thanks</string>
    <string name="rewarded_intro_title">Rewarded ad</string>
    <string name="watch_video_ad_to_proceed">Watch a rewarded ad to continue and earn this reward.</string>
    <string name="loading_ad">Loading Ad...</string>
    <string name="confim_delete_action">Title</string>
    <string name="description">Desctiption</string>
    <string name="delete">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title">Check Your internet Connection!</string>
    <string name="banner_ad_loading">Banner Ad Loading...</string>
    <string name="ad">AD</string>
    <string name="install">Install</string>
    <string name="premium_title">Premium</string>
    <string name="premium_description">Remove ads and unlock the premium experience.</string>
    <string name="premium_status_active">ACTIVE</string>
    <string name="premium_status_expired">EXPIRED</string>
    <string name="premium_status_available">AVAILABLE</string>
    <string name="premium_plan_label">Plan</string>
    <string name="premium_billing_label">Billing</string>
    <string name="premium_price_label">Price</string>
    <string name="premium_expiry_label">Expiry</string>
    <string name="premium_purchase">Remove Ads</string>
    <string name="premium_renew">Renew Premium</string>
    <string name="premium_active_button">Premium Active</string>
    <string name="premium_change_plan">Change Plan</string>
    <string name="premium_restore">Restore purchase</string>
    <string name="premium_manage_subscription">Manage subscription</string>
    <string name="premium_manage_subscription_failed">Could not open Google Play subscription management.</string>
    <string name="premium_checking">Checking your Google Play purchase...</string>
    <string name="premium_restored">Purchase restored</string>
    <string name="premium_not_found">No active purchase was found</string>
    <string name="premium_expiry_syncing">Managed by Google Play</string>
    <string name="premium_lifetime">Never expires</string>
    <string name="premium_price_play">See price in Google Play</string>
    <string name="premium_subscription">Subscription</string>
    <string name="premium_one_time">One-time purchase</string>
    <string name="premium_screen_closing">Purchase is unavailable while this screen is closing</string>
    <string name="itwing_flow_app_logo">App logo</string>
    <string name="itwing_flow_back">Back</string>
    <string name="itwing_flow_next">Next</string>
    <string name="itwing_flow_finish">Finish</string>
    <string name="itwing_flow_accept">Accept</string>
    <string name="itwing_flow_accept_terms">I accept the Terms of Use</string>
    <string name="itwing_flow_accept_required">Please accept the Terms of Use</string>
    <string name="itwing_flow_loading">Loading app configuration</string>
    <string name="itwing_in_app_notification_badge">Update</string>
    <string name="itwing_in_app_notification_image">Notification image</string>
    <string name="itwing_in_app_notification_open">Open</string>
    <string name="itwing_in_app_notification_ok">Got it</string>
    <string name="app_name">IT Wing Technologies</string>
    <string name="splash_desc">This is IT Wing Official SDK</string>
    <string name="itwing_wallpapers_empty">No wallpapers available</string>
    <string name="itwing_wallpapers_unavailable">Wallpapers unavailable</string>
    <string name="itwing_media_empty">No media available</string>
    <string name="itwing_media_unavailable">Media unavailable</string>
    <string name="itwing_categories_unavailable">Categories unavailable</string>
    <string name="itwing_sdk_not_ready_title">SDK not ready</string>
    <string name="itwing_sdk_not_ready_message">Check internet connection and SDK initialization.</string>
    <string name="itwing_cached_content_title">Offline content</string>
    <string name="itwing_cached_content_message">Internet is not available, so cached content is shown. When internet is available, updated content will be loaded automatically.</string>
    <string name="itwing_premium_badge">Premium</string>
    <string name="itwing_media_player_loading">Loading media...</string>
    <string name="itwing_media_player_error">Media could not be played</string>
    <string name="itwing_media_player_mute">Mute</string>
    <string name="itwing_media_player_unmute">Unmute</string>
    <string name="itwing_action_review_title">Enjoying this app?</string>
    <string name="itwing_action_review_message">If you like our app, please give us your valuable feedback by the halp of stars.</string>
    <string name="itwing_action_review_low_hint">Tell us what should be improved.</string>
    <string name="itwing_action_review_send_feedback">Send feedback</string>
    <string name="itwing_action_review_thanks">Thanks for your feedback.</string>
    <string name="itwing_action_review_email_subject">%1$s app feedback</string>
    <string name="itwing_action_review_email_body">Stars: %1$s\n\nFeedback:\n%2$s\n\nDevice Info:\nOS API: %3$s\nDevice: %4$s\nModel: %5$s</string>
</resources>
