<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/monasans"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/confim_delete_action"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/monasans"
                android:text="@string/description"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/delete"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>